[package]
name = "token-stake-model"
version = "0.1.0"
description = "Created with Anchor"
edition = "2018"

[lib]
crate-type = ["cdylib", "lib"]
name = "token_stake_model"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.20.1"
anchor-spl = "0.20.1"
spl-token = {version = "3.1.1", features = ["no-entrypoint"]}
thiserror = "1.0"
num-derive = "0.3"
num-traits = "0.2"
solana-program = "1.6.6"